--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,69 +1,3 @@
-  
-.slider{
-    border: none;
-    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-    margin: auto;
-
-
-        @media screen and (max-width:767px){
-            width:280px;
-            padding: 20px 20px 30px;
-            margin-bottom: 20px;}
-    
-           @media screen and(min-width:768px){
-            width: 688px;
-            display: flex;
-            padding: 40px;
-            margin-bottom: 30px;
-        }
-           @media screen and(min-width:1344px){
-            width: 1090px;
-            padding-top: 50px;
-            padding-bottom: 50px;
-            padding-right: 112px;
-            padding-left: 82px;
-            margin-bottom: 40px;
-        }
-    &-item{
-        @media screen and(min-width:768px){
-            display: flex;
-        }
-    }
-}
-
-.slider2{
-
-    width: 280px;
-    margin: 0 auto;
-    .item{
-        width: 54px;
-        // margin-right: 10px;
-            }
-    picture{
-        width: 54px;
-     
-    }
-    .slick-slide {
-        width: 54px;
-        .slick-active{
-            width: 0;
-            margin-right: 10px;
-            }
-            .slick-cloned{
-                width: 0;
-            }
-    }
-  
-// .slick-list.draggable{
-//     width: 280px;
-//     margin: 0;
-// }
-}
-        .link-reviews{
-            color: var(--accent-color);
-            text-decoration-skip-ink: none;
-    }
-    
     .logo-vk{
         width: 30px;
         height: 30px;
@@ -306,181 +240,235 @@
             display: block;
         }
     }
+
+      
 .slider{
-.slick{
-    &-next{
+    border: none;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+    margin: auto;
+
+
+        @media screen and (max-width:767px){
+            width:280px;
+            padding: 20px 20px 30px;
+            margin-bottom: 20px;}
+    
+           @media screen and(min-width:768px){
+            width: 688px;
+            display: flex;
+            padding: 40px;
+            margin-bottom: 30px;
+        }
+           @media screen and(min-width:1344px){
+            width: 1090px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+            padding-right: 112px;
+            padding-left: 82px;
+            margin-bottom: 40px;
+        }
+    &-item{
+        @media screen and(min-width:768px){
+            display: flex;
+        }
+    }
+    .slick{
+        &-next{
+            @media screen and(max-width:767px){
+                display: none;  
+            }
+            @media screen and(min-width:768px){
+                right: -14.5px;  
+            }
+            @media screen and(min-width:1344px){
+                right: -85px;  
+            }  
+       
+        &::before{
+        background-image: url(../images/Reviews/Arrow-left.svg);
+        background-repeat: no-repeat;
+    
+        font-family: 'slick';
+        font-size: 27px;
+        line-height: 1;
+    
+        opacity: 1;
+    
+    
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    
         @media screen and(max-width:767px){
             display: none;  
         }
-        @media screen and(min-width:768px){
-            right: -14.5px;  
         }
+    }
+    
+    &-prev{
+        @media screen and(max-width:767px){
+        display: none;
+           
+        }
+        
+        @media screen and(min-width:768px){
+            left: -14.5px;  
+        }
+    
         @media screen and(min-width:1344px){
-            right: -85px;  
-        }  
-   
-    &::before{
-    background-image: url(../images/Reviews/Arrow-left.svg);
-    background-repeat: no-repeat;
-
-    font-family: 'slick';
-    font-size: 27px;
-    line-height: 1;
-
-    opacity: 1;
-
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    @media screen and(max-width:767px){
-        display: none;  
-    }
-    }
-}
-
-&-prev{
-    @media screen and(max-width:767px){
-    display: none;
-       
-    }
+            left: -85px;  
+        }
+        
+        &::before{
+        background-image: url(../images/Reviews/Arrow-right.svg);
+        background-repeat: no-repeat;
     
-    @media screen and(min-width:768px){
-        left: -14.5px;  
-    }
-
-    @media screen and(min-width:1344px){
-        left: -85px;  
-    }
+        font-family: 'slick';
+        font-size: 27px;
+        line-height: 1;
     
-    &::before{
-    background-image: url(../images/Reviews/Arrow-right.svg);
-    background-repeat: no-repeat;
-
-    font-family: 'slick';
-    font-size: 27px;
-    line-height: 1;
-
-    opacity: 1;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    @media screen and(max-width:767px){
-        display: none;  
+        opacity: 1;
+    
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    
+        @media screen and(max-width:767px){
+            display: none;  
+        }
+    
     }
-
+    }
+    }
+    .slick-prev,
+    .slick-next
+    {
+        font-size: 0;
+        line-height: 0;
+        position: absolute;
+        display: block;
+        top: 50%;
+        width: 25px;
+        height: 25px;
+        padding: 0;
+        -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+    
+        cursor: pointer;
+    
+        color: transparent;
+        border: none;
+        outline: none;
+        background: transparent;
+    
+    }
 }
-}
-}
-.slick-prev,
-.slick-next
-{
-    font-size: 0;
-    line-height: 0;
-    position: absolute;
-    display: block;
-    top: 50%;
-    width: 25px;
-    height: 25px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-
-    cursor: pointer;
-
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
-
-}}
 
 .slider2{
-.slick{
-    &-next{
-        @media screen and(max-width:767px){
-            right: 2px;  
-        }
-        @media screen and(min-width:768px){
-            right: -14.5px;  
-        }
-        @media screen and(min-width:1344px){
-            right: -85px;  
-        }  
-   
-    &::before{
-    background-image: url(../images/Reviews/Arrow-left.svg);
-    background-repeat: no-repeat;
+    width: 183px;
+    height: 54px;
+    margin: 0 auto;
+    .item {
+        width: 54px !important; 
+        height: 54px !important;
+            }
+    .slick-slide {
+        width: 54px !important;
+        height: 54px !important;
+        margin-right: 10px !important;
 
-    font-family: 'slick';
-    font-size: 27px;
-    line-height: 1;
-
-    opacity: 1;
-
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     }
-}
 
-&-prev{
-    @media screen and(max-width:767px){
-      left: -2px;
+    
+    .slick{
+        &-list{
+            margin-left: -4px!important;
+           }
+        &-track {
+            height: 54px !important;
+        }
+        &-next{
+            @media screen and(max-width:767px){
+                right: -45px;  
+            }
+            @media screen and(min-width:768px){
+                right: -14.5px;  
+            }
+            @media screen and(min-width:1344px){
+                right: -85px;  
+            }  
        
+        &::before{
+        background-image: url(../images/Reviews/Arrow-left.svg);
+        background-repeat: no-repeat;
+    
+        font-family: 'slick';
+        font-size: 27px;
+        line-height: 1;
+    
+        opacity: 1;
+    
+    
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        }
     }
     
-    @media screen and(min-width:768px){
-        left: -14.5px;  
+    &-prev{
+        @media screen and(max-width:767px){
+          left: -45px;
+           
+        }
+        
+        @media screen and(min-width:768px){
+            left: -14.5px;  
+        }
+    
+        @media screen and(min-width:1344px){
+            left: -85px;  
+        }
+        
+        &::before{
+        background-image: url(../images/Reviews/Arrow-right.svg);
+        background-repeat: no-repeat;
+    
+        font-family: 'slick';
+        font-size: 27px;
+        line-height: 1;
+    
+        opacity: 1;
+    
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    
     }
-
-    @media screen and(min-width:1344px){
-        left: -85px;  
+    }
+    }
+    .slick-prev,
+    .slick-next
+    {
+        font-size: 0;
+        line-height: 0;
+        position: absolute;
+        display: block;
+        top: 65%;
+        width: 25px;
+        height: 25px;
+        padding: 0;
+        -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+    
+        cursor: pointer;
+    
+        color: transparent;
+        border: none;
+        outline: none;
+        background: transparent;
+    
     }
     
-    &::before{
-    background-image: url(../images/Reviews/Arrow-right.svg);
-    background-repeat: no-repeat;
-
-    font-family: 'slick';
-    font-size: 27px;
-    line-height: 1;
-
-    opacity: 1;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
 }
-}
-}
-.slick-prev,
-.slick-next
-{
-    font-size: 0;
-    line-height: 0;
-    position: absolute;
-    display: block;
-    top: 50%;
-    width: 25px;
-    height: 25px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-
-    cursor: pointer;
-
-    color: transparent;
-    border: none;
-    outline: none;
-    background: transparent;
-    // @media screen and(max-width:767px){
-    //     top: 55%;
-    // }
-
-}
-
-}
+    .link-reviews{
+        color: var(--accent-color);
+        text-decoration-skip-ink: none;
+    }
