--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -20,7 +20,9 @@
     padding-right: 115px;
   }
 }
-
+.footer a {
+  text-decoration: none;
+}
 .footer-list-button {
   display: flex;
   justify-content: center;
