--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -1,318 +1,317 @@
-
-
 .locations {
-    display: block;
-    background-color: $color-footer;
-    height: 1295px;
-       @media screen and (min-width: 768px){
-        display: flex;
-        flex-wrap: wrap;
-        height: 540px;
-       }
-        @media screen and (min-width: 1280px) {
-         background-image:
-         url('../images/desktop/sectionbd/drops.png');
-         background-repeat: no-repeat; 
-         height: 571px;
-        }
+  display: block;
+  background-color: $color-footer;
+  height: 1295px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    height: 540px;
+  }
+  @media screen and (min-width: 1280px) {
+    background-image: url('../images/desktop/sectionbd/drops.png');
+    background-repeat: no-repeat;
+    height: 571px;
+  }
+}
+
+.locations a {
+  text-decoration: none;
 }
 
 .container-locations {
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-right: auto;
-    margin-left: auto;
-  
-    @media screen and (min-width: 320px) {
-      width: 320px;
-      height: 1295px;
-    }
-  
-    @media screen and (min-width: 768px) {
-      width: 768px;
-      padding-left: 34px;
-      padding-right: 34px;
-      height: 540px;
-    }
-  
-    @media screen and (min-width: 1280px) {
-      width: 1280px;
-      padding-left: 115px;
-      padding-right: 115px;
-      height: 570px;
-    }
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media screen and (min-width: 320px) {
+    width: 320px;
+    height: 1295px;
   }
-  
-.locations-list {
-    position: relative;
-    top: -88px;
-    height: 1381px;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 61px;
-    @media screen and (min-width: 768px) {
-        display: flex;
-        flex-wrap: wrap;  
-        justify-content: space-between;
-        height: 630px;
-        padding-bottom: 85px;
-        margin-bottom: 0;
-    }
-    @media screen and (min-width: 1280px) {
-        display: flex;
-        flex-wrap: wrap;  
-        justify-content: space-between;
-        height: 656px;
-        margin-bottom: 0;
-        padding-bottom: 86px;
-    }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-left: 34px;
+    padding-right: 34px;
+    height: 540px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 1280px;
+    padding-left: 115px;
+    padding-right: 115px;
+    height: 570px;
+  }
 }
-    
+
+.locations-list {
+  position: relative;
+  top: -88px;
+  height: 1381px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 61px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 630px;
+    padding-bottom: 85px;
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1280px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 656px;
+    margin-bottom: 0;
+    padding-bottom: 86px;
+  }
+}
+
 .locations-item {
+  width: 220px;
+  height: 427px;
+  background-color: $color-text-white;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-top: 43px;
+  padding-bottom: 37px;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
+    margin-left: 0;
+    margin-right: 0;
+    height: 544px;
+    margin-bottom: 0;
+    padding-right: 27px;
+    padding-left: 27px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     width: 220px;
-    height: 427px;
-    background-color: white;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-top: 43px;
-    padding-bottom: 37px;
-    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-    border-radius: 24px;
-    @media screen and (min-width: 768px) {
-        flex-wrap: wrap;  
-        margin-left: 0;
-        margin-right: 0;
-        height: 544px;
-        margin-bottom: 0;
-        padding-right: 27px;
-        padding-left: 27px;
-        padding-top: 50px;
-        padding-bottom: 50px;
-        width: 220px;
-    }
-    @media screen and (min-width: 1280px) {
-        width: 330px;
-        height: 572px;
-        padding-right: 44px;
-        padding-left: 44px;
-        padding-top: 50px;
-        padding-bottom: 55px;
-    }
+  }
+  @media screen and (min-width: 1280px) {
+    width: 330px;
+    height: 572px;
+    padding-right: 44px;
+    padding-left: 44px;
+    padding-top: 50px;
+    padding-bottom: 55px;
+  }
 }
 
 .locations-time {
-    color: $color-ellipse;
-    font-size: 12px;
+  color: $color-ellipse;
+  font-size: 12px;
 }
 .locations-item-cafe {
-    border-radius: 6px;
-    width: 80px;
-    height: 16px;
-    background-color: $color-products-coffe;
-    text-align: center;
-    border: transparent;
-    color: $color-text-white;
-    margin-bottom: 25px;
-    @media screen and (min-width: 768px) {
-        height: 28px;
-        font-size: 16px;
-        padding-top: 3px;
-        margin-bottom: 30px;
-    }
-    @media screen and (min-width: 768px) {
-        height: 28px;
-        font-size: 16px;
-        padding-top: 3px;
-        margin-bottom: 32px;
-    }    
+  border-radius: 6px;
+  width: 80px;
+  height: 16px;
+  background-color: $color-products-coffe;
+  text-align: center;
+  border: transparent;
+  color: $color-text-white;
+  margin-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    height: 28px;
+    font-size: 16px;
+    padding-top: 3px;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    height: 28px;
+    font-size: 16px;
+    padding-top: 3px;
+    margin-bottom: 32px;
+  }
 }
 
 .locations-item-food {
-    border-radius: 6px;
-    width: 130px;
-    height: 16px;
-    background-color: $color-products-shakes; 
-    text-align: center;
-    border: transparent;
-    color: $color-text-white;
-    margin-bottom: 25px;
-    @media screen and (min-width: 768px) {
-        height: 28px;
-        font-size: 16px;
-        padding-top: 3px;
-        margin-bottom: 30px;
-    }
-    @media screen and (min-width: 768px) {
-        height: 28px;
-        font-size: 16px;
-        padding-top: 3px;
-        margin-bottom: 32px;
-    }
+  border-radius: 6px;
+  width: 130px;
+  height: 16px;
+  background-color: $color-products-shakes;
+  text-align: center;
+  border: transparent;
+  color: $color-text-white;
+  margin-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    height: 28px;
+    font-size: 16px;
+    padding-top: 3px;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    height: 28px;
+    font-size: 16px;
+    padding-top: 3px;
+    margin-bottom: 32px;
+  }
 }
 
 .locations-item-cafe p .locations-item-food p {
-    font-size: 12px;
-    line-height: 1.86;
-    letter-spacing: 0.04em;
-    color: $color-text-white;
+  font-size: 12px;
+  line-height: 1.86;
+  letter-spacing: 0.04em;
+  color: $color-text-white;
 }
 
 .chicago-text span,
 .losangeles-text span,
 .newyork-text span {
-    display: inline-block;
-    font-size: 12px;
-    line-height: 1.86;
-    letter-spacing: 0.04em;
-    font-weight: 500;
-    height: 22px;
-    margin-bottom: 10px;
-    @media screen and (min-width: 768px) {
-        font-size: 14px;
-        height: 26px;
-    }
-    @media screen and (min-width: 1280px) {
-        font-size: 16px;
-        height: 30px;
-    }
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1.86;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  height: 22px;
+  margin-bottom: 10px;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    height: 26px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+    height: 30px;
+  }
 }
 
 .chicago-text p,
 .losangeles-text p,
 .newyork-text p {
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    height: 36px;
-    margin-bottom: 25px;
-    color: $color-text-grey;
-    @media screen and (min-width: 768px) {
-        font-size: 14px;
-        height: 65px;
-        margin-bottom: 30px;
-    }
-    @media screen and (min-width: 1280px) {
-        height: 50px;
-        font-size: 16px;
-        margin-bottom: 32px;
-    }
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  height: 36px;
+  margin-bottom: 25px;
+  color: $color-text-grey;
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    height: 65px;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1280px) {
+    height: 50px;
+    font-size: 16px;
+    margin-bottom: 32px;
+  }
 }
-    
+
 .locations-line {
-    width: 179px;
-    margin: 0;
-    @media screen and (min-width: 768px) {
-        width: 157px;
-    }
-    @media screen and (min-width: 1280px) {
-        width: 234px;
-    }
+  width: 179px;
+  margin: 0;
+  @media screen and (min-width: 768px) {
+    width: 157px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 234px;
+  }
 }
 
 .chicago-day p,
 .losangeles-day p,
 .newyork-day p {
-    font-size: 12px;
-    line-height: 1.86;
-    letter-spacing: 0.04em;
-    font-weight: 500;
-    height: 22px;
-    @media screen and (min-width: 768px) {
-        height: 26px;
-        font-size: 14px;
-    }
-    @media screen and (min-width: 1280px) {
-        height: 30px;
-        font-size: 16px;
-    }
+  font-size: 12px;
+  line-height: 1.86;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  height: 22px;
+  @media screen and (min-width: 768px) {
+    height: 26px;
+    font-size: 14px;
+  }
+  @media screen and (min-width: 1280px) {
+    height: 30px;
+    font-size: 16px;
+  }
 }
 
 .chicago-day span,
 .losangeles-day span,
 .newyork-day span {
-    font-size: 12px;
-    line-height: 1.86;
-    letter-spacing: 0.04em;
-    font-weight: 500;
-    height: 22px;
-    @media screen and (min-width: 768px) {
-        height: 26px;
-        font-size: 14px;
-    }
-    @media screen and (min-width: 1280px) {
-        height: 30px;
-        font-size: 16px;
-    }
+  font-size: 12px;
+  line-height: 1.86;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  height: 22px;
+  @media screen and (min-width: 768px) {
+    height: 26px;
+    font-size: 14px;
+  }
+  @media screen and (min-width: 1280px) {
+    height: 30px;
+    font-size: 16px;
+  }
 }
 
 .chicago-table,
 .losangeles-table,
 .newyork-table {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    @media screen and (min-width: 768px) {
-        margin-top: 30px;
-        margin-bottom: 30px;
-        height: 113px;
-    }
-    @media screen and (min-width: 1280px) {
-        margin-top: 32px;
-        margin-bottom: 32px;
-        height: 131px;
-    }
+  margin-top: 25px;
+  margin-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    height: 113px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-top: 32px;
+    margin-bottom: 32px;
+    height: 131px;
+  }
 }
 
 .time-active {
-    display: block;
-    margin-bottom: 10px;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .chicago-contact,
 .losangeles-contact,
 .newyork-contact {
-    display: block;
-    color: $color-text-grey;
-    margin-top: 25px;
-    font-size: 12px;
-    height: 37px;
-    @media screen and (min-width: 768px) {
-        margin-top: 30px;
-        font-size: 14px;
-        height: 48px;
-    }
-    @media screen and (min-width: 1280px) {
-        margin-top: 32px;
-        font-size: 16px;
-        height: 50px;
-    }
+  display: block;
+  color: $color-text-grey;
+  margin-top: 25px;
+  font-size: 12px;
+  height: 37px;
+  @media screen and (min-width: 768px) {
+    margin-top: 30px;
+    font-size: 14px;
+    height: 48px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-top: 32px;
+    font-size: 16px;
+    height: 50px;
+  }
 }
 
 .chicago-contact-tel {
-    display: block;
-    margin-bottom: 5px;
-    @media screen and (min-width: 768px) {
-        margin-bottom: 10px;
-    }
+  display: block;
+  margin-bottom: 5px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 10px;
+  }
 }
 
-
 .locations-item-cafe:hover {
-    cursor: pointer;
-    transform: scale(1.25);
-  }
+  cursor: pointer;
+  transform: scale(1.25);
+}
 
-  .locations-item-food:hover {
-    cursor: pointer;
-    transform: scale(1.25);
-  }
+.locations-item-food:hover {
+  cursor: pointer;
+  transform: scale(1.25);
+}
 
-  .locations-item:hover {
-    cursor: pointer;
-    transform: scale(1.1); 
-    box-shadow: 0px 1px 18px 6px $color-line-modal;
-  }
-
+.locations-item:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  box-shadow: 0px 1px 18px 6px $color-line-modal;
+}
