--- a/src/sass/components/reviews/_reviews.scss
+++ b/src/sass/components/reviews/_reviews.scss
@@ -114,7 +114,7 @@
   left: 0px;
   @media screen and (min-width: $tablet) {
     width: 50px;
-    height: 60px;
+    height: 50px;
     background-image: url('../images/reviews/prev.svg');
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -124,7 +124,8 @@
 }
 
 .slider .slick-arrow.slick-prev::before {
-  content: '';
+  // content: '';
+  display: none;
 }
 
 .slider .slick-arrow.slick-next {
@@ -132,7 +133,7 @@
 
   @media screen and (min-width: $tablet) {
     width: 50px;
-    height: 60px;
+    height: 50px;
     background-image: url('../images/reviews/next.svg');
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -142,7 +143,8 @@
 }
 
 .slider .slick-arrow.slick-next::before {
-  content: '';
+  // content: '';
+  display: none;
 }
 
 .slider .slick-dots {
