animation and breakpoints

--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -3,14 +3,14 @@
 .titul-two {
   text-align: center;
   margin-top: 15px;
-  font-family: Titan One;
-  font-style: normal; // вывести в базовые стили
+  font-family: $secondary-font;
+  font-style: normal;
   font-weight: 400;
   font-size: 34px;
   line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #d41443; // привязать к базовым цветам
+  color: var(--text-red-color);
 
   @media screen and (min-width: 768px) {
     font-size: 48px;
@@ -25,13 +25,13 @@
 
 .pretitul-two {
   text-align: center;
-  font-family: Titan One;
-  font-style: normal; // вывести в базовые стили
+  font-family: $secondary-font;
+  font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.17;
   text-transform: uppercase;
-  color: #ffa5ba; //привязать к базовым цветам
+  color: var(--text-pink-color);
 
   @media screen and (min-width: 768px) {
     font-size: 26px;
@@ -45,8 +45,8 @@
   }
 }
 
-.title-three{
-  font-family: Titan One;
+.title-three {
+  font-family: $secondary-font;
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
@@ -54,10 +54,8 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: var(--primary-white-color);
 }
-
-
 
 /* --------------КНОПКИ БОЛЬШИЕ---------------------*/
 
@@ -111,25 +109,34 @@
 }
 
 .next-one {
-  fill: #ffffff;
+  fill: var(--primary-white-color);
 }
 
 .next-two {
-  fill: #d41443;
+  fill: var(--text-red-color);
 }
 
 //классы цветов
 .appeal-one {
-  background: #d41342; //привязать к базовым цветам
-  color: #ffffff; //привязать к базовым цветам
-}
-
-.appeal-two {
-  background: #ffffff; //привязать к базовым цветам
-  color: #d41443; //привязать к базовым цветам
+  background: var(--text-red-color);
+  color: var(--primary-white-color);
+  transition-duration: $animation-time;
+  transition-timing-function: $animation-function;
 
   &:hover,
   &:focus {
-    background: #ecebeb; //привязать к базовым цветам
+    background: var(--text-red-color);
+  }
+}
+
+.appeal-two {
+  background: var(--primary-white-color);
+  color: var(--text-red-color);
+  transition-duration: $animation-time;
+  transition-timing-function: $animation-function;
+
+  &:hover,
+  &:focus {
+    background: var(--button-hover-color);
   }
 }
