--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -159,7 +159,8 @@
   border-radius: 50%;
   background: #fea5bb;
 
-  transition: background 250ms linear;
+  transition-duration: $animation-time;
+  transition-timing-function: $animation-function;
 
   @media screen and (min-width: 768px) {
     width: 34px;
