--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -39,3 +39,22 @@ textarea {
 a {
   text-decoration: none;
 }
+
+.btn {
+  border-radius: 20px;
+  color: $color-accent;
+  background-color: $color-text-white;
+  border: none;
+}
+.btn:hover,
+.btn:focus {
+  background-color: #ecebeb;
+}
+.btn.light {
+  color: $color-text-white;
+  background-color: $color-accent;
+}
+.btn.light:hover,
+.btn.light:focus {
+  background-color: $color-accent;
+}
