--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,6 +1,9 @@
 .home {
   background-color: $color-header;
 }
+.home a {
+  text-decoration: none;
+}
 .home-container {
   position: relative;
   width: 100%;
@@ -83,7 +86,7 @@
 .home-buttons-list {
   display: inline-flex;
 
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 19px;
   }
   @media screen and (min-width: 1200px) {
@@ -92,15 +95,15 @@
   li:first-child {
     margin-right: 8px;
   }
-  
 }
 .btn {
   border-radius: 20px;
   color: $color-accent;
-  background-color:$color-text-white;
+  background-color: $color-text-white;
   border: none;
 }
-.btn:hover, .btn:focus {
+.btn:hover,
+.btn:focus {
   background-color: $color-accent-hover-btn;
   color: $color-accent;
 }
@@ -108,11 +111,10 @@
   color: $color-text-white;
   background-color: $color-accent;
 }
-.btn.light:hover, .btn.light:focus {
-  background-color:$color-accent;
+.btn.light:hover,
+.btn.light:focus {
+  background-color: $color-accent;
 }
-
-
 
 .home-button {
   border-radius: 20px;
@@ -147,7 +149,7 @@
     box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.6);
   }
 
-  @media screen and (min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     font-size: 14px;
     padding: 10px 15px;
   }
@@ -249,7 +251,7 @@
   &:focus,
   &:hover .home-arrow-icon,
   &:focus .home-arrow-icon {
-    background-color:  rgba(210, 20, 67, 0.6);
+    background-color: rgba(210, 20, 67, 0.6);
     color: $color-text-white;
   }
 
@@ -390,5 +392,3 @@
     left: 475px;
   }
 }
-
-
