--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -294,6 +294,14 @@
   margin-bottom: 35px;
 }
 
+.carousel-indicators .active {
+  background-color: #fff;
+  border-radius: 0px;
+  width: 12px;
+  height: 12px;
+  fill: $color-home-galary;
+  background-image: url('../images/home1.svg');
+}
 .carousel-indicators {
   position: static;
   margin-top: 20px;
@@ -304,6 +312,11 @@
   width: 12px;
   height: 12px;
   border-radius: 50%;
+}
+.carousel-indicators li:not(.active) {
+  background-color: $color-home-galary;
+  width: 12px;
+  height: 12px;
 }
 .carousel-indicators li:not(:last-child) {
   margin-right: 18px;
