--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -295,7 +295,7 @@
 }
 
 .carousel-indicators .active {
-  background-color: #fff;
+  background-color: $color-text-white;
   border-radius: 0px;
   width: 12px;
   height: 12px;
@@ -308,13 +308,13 @@
   margin-bottom: 132px;
 }
 .carousel-indicators li {
-  background-color: $color-home-galary;
+  background-color: $color-ss-footer;
   width: 12px;
   height: 12px;
   border-radius: 50%;
 }
 .carousel-indicators li:not(.active) {
-  background-color: $color-home-galary;
+  background-color: $color-ss-footer;
   width: 12px;
   height: 12px;
 }
