Ховер телефона и мейла

--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -316,6 +316,17 @@
   box-shadow: 0px 1px 18px 6px $color-line-modal;
 }
 
+.chicago-contact a:hover {
+    color: #ffb8ca;
+}
+.losangeles-contact a:hover {
+    color: #ffb8ca;
+}
+.newyork-contact a:hover {
+    color: #ffb8ca;
+}
+
+
 //   .locations-item:hover {
 //     cursor: pointer;
 //     transform: scale(1.1);
