Fix bug in hero section

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,61 +1,82 @@
 <section class="hero">
-    <div class="hero-container">
-        <div class="hero-main-info">
-          <h1 class="hero-title">ice cream<br>made with<br>
-            <span class="hero-passion"> 
-              <span class="hero-0s">p</span><span class="hero-100ms">a</span><span class="hero-200ms">s</span><span class="hero-300ms">s</span><span class="hero-400ms">i</span><span class="hero-500ms">o</span><span class="hero-600ms">n</span>
-            </span>
-          </h1>
-          <ul class="hero-buttons-list">
-              <li><a class="hero-button" href="#products">Products</a></li>
-              <li><a class="hero-button" href="#traditions">How it’s made?</a></li>
-          </ul>
-        </div>
-        <img class="hero-img" 
-          srcset="
-           ./images/hero/ice-cream-mobile.png  171w,
-           ./images/hero/ice-cream-mobile@2x.png  342w,
-           ./images/hero/ice-cream-tablet.png  143w,
-           ./images/hero/ice-cream-tablet@2x.png  286w,
-           ./images/hero/ice-cream-desktop.png  236w,
-           ./images/hero/ice-cream-desktop@2x.png 472w"
-          src="./images/hero/ice-cream-mobile.png"
-          alt="ice-cream"
-          sizes="(min-with: 768px) 20vw, 40vw">
-        <div class="hero-product">
-            <div class="hero-milk-img">
-                <img 
-                srcset="./images/hero/milk-tablet.png  124w,
-                     ./images/hero/milk-tablet@2x.png  248w,
-                     ./images/hero/milk-desktop.png  188w,
-                     ./images/hero/milk-desktop@2x.png 376w"
-                src="./images/hero/milk-tablet.png" 
-                alt="milk"
-                sizes="10vw">
-            </div>
-            <div class="hero-product-info">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                <button class="hero-arrow-button" type="button" aria-label="slider info button">
-                    <svg class="hero-icon-arrow">
-                        <use href="./images/icons/symbol-defs.svg#arrow""></use>
-                    </svg>
-                </button>
-            </div>            
-        </div>
-        <div class="hero-service-counting">
-            <ul class="hero-counting-list">
-                <li><span class="hero-number">16</span>cafes</li>
-                <li><span class="hero-number">23</span>food trucks</li>
-            </ul>
-        </div>
-        <img class="hero-girl-img" 
-        srcset="./images/hero/girl-tablet.png  168w,
-                ./images/hero/girl-tablet@2x.png  336w,
-                ./images/hero/girl-desktop.png  293w,
-                ./images/hero/girl-desktop@2x.png 586w"
-        src="./images/hero/girl-tablet.png" 
-        alt="girl with ice-cream"
-        sizes="20vw">
-        <div class="hero-circle"></div>
+  <div class="hero-container">
+    <div class="hero-main-info">
+      <h1 class="hero-title">
+        ice cream<br />made with<br />
+        <span class="hero-passion">
+          <span class="hero-0s">p</span><span class="hero-100ms">a</span
+          ><span class="hero-200ms">s</span><span class="hero-300ms">s</span
+          ><span class="hero-400ms">i</span><span class="hero-500ms">o</span
+          ><span class="hero-600ms">n</span>
+        </span>
+      </h1>
+      <ul class="hero-buttons-list">
+        <li><a class="hero-button" href="#products">Products</a></li>
+        <li><a class="hero-button" href="#traditions">How it’s made?</a></li>
+      </ul>
     </div>
+    <img
+      class="hero-img"
+      srcset="
+        ./images/hero/ice-cream-mobile.png     171w,
+        ./images/hero/ice-cream-mobile@2x.png  342w,
+        ./images/hero/ice-cream-tablet.png     143w,
+        ./images/hero/ice-cream-tablet@2x.png  286w,
+        ./images/hero/ice-cream-desktop.png    236w,
+        ./images/hero/ice-cream-desktop@2x.png 472w
+      "
+      src="./images/hero/ice-cream-mobile.png"
+      alt="ice-cream"
+      sizes="(min-with: 768px) 20vw, 40vw"
+    />
+    <div class="hero-product">
+      <div class="hero-milk-img">
+        <img
+          srcset="
+            ./images/hero/milk-tablet.png     124w,
+            ./images/hero/milk-tablet@2x.png  248w,
+            ./images/hero/milk-desktop.png    188w,
+            ./images/hero/milk-desktop@2x.png 376w
+          "
+          src="./images/hero/milk-tablet.png"
+          alt="milk"
+          sizes="10vw"
+        />
+      </div>
+      <div class="hero-product-info">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <button
+          class="hero-arrow-button"
+          type="button"
+          aria-label="slider info button"
+        >
+          <svg class="hero-icon-arrow">
+            <use href="./images/icons/symbol-defs.svg#arrow"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="hero-service-counting">
+      <ul class="hero-counting-list">
+        <li><span class="hero-number">16</span>cafes</li>
+        <li><span class="hero-number">23</span>food trucks</li>
+      </ul>
+    </div>
+    <img
+      class="hero-girl-img"
+      srcset="
+        ./images/hero/girl-tablet.png     168w,
+        ./images/hero/girl-tablet@2x.png  336w,
+        ./images/hero/girl-desktop.png    293w,
+        ./images/hero/girl-desktop@2x.png 586w
+      "
+      src="./images/hero/girl-tablet.png"
+      alt="girl with ice-cream"
+      sizes="20vw"
+    />
+    <div class="hero-circle"></div>
+  </div>
 </section>
