--- a/src/sass/layout/_programm.scss
+++ b/src/sass/layout/_programm.scss
@@ -132,11 +132,17 @@
 
 /*-------------MEDIA-RULES FOR MOBILE  -------------*/
 
-// @media screen and (min-width: 320px) {
-//   .sections-wrapper {
-//     // max-width: 320px;
-//   }
-// }
+@media screen and (min-width: 320px) {
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (-o-min-device-pixel-ratio: 2/1),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .programm {
+      background-image: url(../images/our_program/women_our_program-mobile@2x.png);
+    }
+  }
+}
 
 /*-------------MEDIA-RULES FOR TABLET -------------*/
 
@@ -198,7 +204,7 @@
     screen and (-o-min-device-pixel-ratio: 2/1),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .sections-wrapper {
+    .programm {
       background-image: url(../images/our_program/women_our_program-tablet@2x.png);
     }
   }
@@ -210,7 +216,7 @@
   .programm {
     position: relative;
     margin-bottom: 329px;
-    background-image: url(../images/our_program/women_our_program.png);
+    background-image: url(../images/our_program/women_our_program-desk.png);
     background-size: 672px 502px;
     background-position: calc(50% - 498px) 676px;
     margin-bottom: 329px;
@@ -317,18 +323,8 @@
     screen and (-o-min-device-pixel-ratio: 2/1),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    .sections-wrapper {
-      background-image: url(../images/our_program/women_our_program@2x.png);
+    .programm {
+      background-image: url(../images/our_program/women_our_program-desk@2x.png);
     }
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (-webkit-min-device-pixel-ratio: 2),
-  screen and (-o-min-device-pixel-ratio: 2/1),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .sections-wrapper {
-    background-image: url(../images/our_program/women_our_program@2x.png);
   }
 }
