Исправил картинку огня в секции Главные проблемы. Теперь всё ОК.

--- a/src/sass/layout/_main_problems.scss
+++ b/src/sass/layout/_main_problems.scss
@@ -159,6 +159,18 @@
     width: 100%;
     height: 449px;
     margin-bottom: 170px;
+
+    background-image: url(../images/main_problems/fire-in-problems.png);
+    background-size: 453px 620px;
+    background-position: calc(50% + 670px) 50px;
+    background-repeat: no-repeat;
+
+    // добавляет фоновое изображения для ретины
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/main_problems/fire-in-problems@2x.png);
+    }
   }
 
   .main_problems__title {
