Удалила ссылку с кнопки

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,7 @@
                 </a>
             </li>
             <li class="footer-button-item">
-                <a href="https://franchisebusiness.com.au/terms-and-conditions-3/">
+                <a href="">
                 <button type="button" class="footer-button second-button transition">
                     Franchise
                     <svg class="footer-icon-vector">
