input box-shadow

--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -401,6 +401,7 @@ input {
   outline: none;
 }
 input:-webkit-autofill {
+  box-shadow: inset 0 0 0 50px #fff !important;
   -webkit-box-shadow: inset 0 0 0 50px #fff !important;
 }
 
