Заменил id для верхней секции

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,12 @@
 <header class="header">
     <div class="container">
         <div class="header__body">
-            <a href="#header" class="logo">
+            <a href="#top" class="logo">
                 <svg class="logo__image">
                     <use href="./images/sprite.svg#logo"></use>
                 </svg>
             </a>
-            <a href="#header" class="logo-mobile">
+            <a href="#top" class="logo-mobile">
                 <svg class="logo__image">
                     <use href="./images/sprite.svg#logo--mobile"></use>
                 </svg>
@@ -16,12 +16,12 @@
                 <div class="header__menu-tablet" data-menu-tablet>
                     <div class="container">
                         <div class="mobile-menu">
-                            <a href="#header" class="logo-menu-tablet">
+                            <a href="#top" class="logo-menu-tablet">
                                 <svg class="logo__image">
                                     <use href="./images/sprite.svg#logo--tablet-menu"></use>
                                 </svg>
                             </a>
-                            <a href="#header" class="logo-menu-mobile">
+                            <a href="#top" class="logo-menu-mobile">
                                 <svg class="logo__image">
                                     <use href="./images/sprite.svg#logo--mobile-menu"></use>
                                 </svg>
