додано padding-top

--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -1,4 +1,8 @@
 @media screen and (min-width: 320px) {
+  .teacher{
+    padding-top: 270px;
+    padding-bottom: 40px;
+  }
   .teacher-title {
     font-family: Montserrat;
     font-weight: 800;
@@ -72,6 +76,8 @@
 @media screen and (min-width: 768px) {
   .teacher {
     display: flex;
+    padding-top: 302px;
+    padding-bottom: 50px;
   }
   .teacher-right {
     flex-direction: column;
@@ -96,7 +102,11 @@
     padding-top: 27px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1344px) {
+  .teacher {
+    padding-top: 330px;
+    padding-bottom: 130px;
+  }
   .teacher-title {
     font-size: 46px;
     margin-top: 130px;
