--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,40 +1,39 @@
 .header {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.3;
-  color: var(--primary-white-color);
-
   position: absolute;
-  // z-index: 1000;
-  background-color: transparent;
-
-  justify-content: space-between;
+  z-index: 12;
   top: 0;
   width: 100%;
   padding-top: 6px;
 
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.3;
+  color: var(--primary-white-color);
+  background-color: transparent;
+
   @media screen and (min-width: 768px) {
     padding-top: 37px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    font-size: 16px;
-  }
-  a {
-    color: inherit; //стили временно заданы через тег
   }
 }
 
 .header-block {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  a {
+    color: inherit;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-left: 95px;
+    padding-right: 95px;
+    font-size: 16px;
+  }
 }
 
 .menu-button {
-  z-index: 2000;
-  top: 15px;
-  right: 20px;
+  z-index: 12;
+  // top: 15px;
+  // right: 20px;
 
   background-size: cover;
   background-color: transparent;
@@ -48,42 +47,39 @@
     right: 20px;
     position: absolute;
   }
-
-  @media screen and (min-width: 768px) {
-    &.is-open {
-      position: absolute;
-      top: 15px;
-      right: 20px;
-    }
-  }
 }
+
 .logo {
   flex-grow: 1;
 }
 
 .menu-container {
-  z-index: 1500;
+  z-index: 11;
   position: absolute;
+
   top: 0;
-  right: 0;
+  right: -80%;
   max-width: 250px;
   width: 100%;
   height: 100vh;
   padding-top: 60px;
   background-color: var(--menu-mob-bg-color);
+  transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.is-open {
     display: flex;
     flex-direction: column;
+    right: 0;
+    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   @media screen and (min-width: 768px) {
     min-width: 40%;
   }
 
-  @media screen and (max-width: 1279px) {
-    display: none;
-  }
+  // @media screen and (max-width: 1279px) {
+  //   display: none;
+  // }
 }
 
 @media screen and (min-width: 1280px) {
@@ -100,11 +96,12 @@
 }
 
 .header-btn {
-  margin-left: 30px;
-}
-@media screen and (max-width: 767px) {
-  .header-btn {
+  @media screen and (max-width: 767px) {
     display: none;
+  }
+
+  @media screen and (max-width: 1279px) {
+    margin-left: 30px;
   }
 }
 
@@ -113,29 +110,34 @@
   stroke: white;
 
   .menu-button & {
-    display: none;
+    opacity: 0;
+    // transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // display: none;
   }
   .menu-button.is-open & {
-    display: block;
+    opacity: 1;
+
+    transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // display: block;
   }
 }
 
 .icon-menu {
   .menu-button.is-open & {
-    display: none;
+    opacity: 0;
+    // transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // display: none;
   }
 }
-// ========================================
-
 // <!-- ========= descktop header ============ -->
-.header-descktop {
-  display: flex;
-  align-items: center;
+.animate__fadeIn {
+  transition: all 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+// ==============================
 
 .nav-list {
   display: flex;
-  margin: 0 50px; //подобрать отступы
+  margin: 0 70px; //подобрать отступы
 }
 
 .nav-item {
@@ -165,17 +167,6 @@
   border-bottom: 1px solid var(--menu-mob-border);
 }
 
-.mob-menu-link {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 18px;
-  color: var(--primary-white-color);
-
-  &:hover {
-    color: var(--text-red-color);
-  }
-}
-
 .mob-menu-btn {
   margin-left: 21px;
   margin-bottom: 19px;
@@ -191,3 +182,24 @@
     margin-left: 24px;
   }
 }
+.mob-menu-link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--primary-white-color);
+
+  &:hover {
+    color: var(--text-red-color);
+  }
+}
+// ==============
+
+// .menu-container {
+//   transform: translateX(-100%);
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
+
+// .menu-container.is-open {
+//   transform: translateX(0);
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
