--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,294 +1,260 @@
-
 .products {
-    padding-top: 121px;
-    padding-bottom: 98px;
-    background-color: $color-text-white;
-    width: 100%;
+  padding-top: 121px;
+  padding-bottom: 98px;
+  background-color: $color-text-white;
+  width: 100%;
 
-    @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     padding-top: 122px;
     padding-bottom: 112px;
-    }
-    @media screen and (min-width: 1280px){
+  }
+  @media screen and (min-width: 1280px) {
     padding-top: 127px;
     padding-bottom: 119px;
-    }
-
+  }
 }
 
 .products-container {
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  // outline: 1px solid tomato;
+  width: 320px;
+
+  @media screen and (min-width: 320px) {
     margin-right: auto;
     margin-left: auto;
-    // outline: 1px solid tomato;
-    width: 320px;
+  }
 
-    @media screen and (min-width: 320px) {
-       margin-right: auto;
-       margin-left: auto;
-    }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-left: 34px;
+    padding-right: 34px;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 768px;
-        padding-left: 34px;
-        padding-right: 34px;
-    }
-
-    @media screen and (min-width: 1280px) {
-        width: 1280px;
-        padding-left: 115px;
-        padding-right: 115px;
-    }
+  @media screen and (min-width: 1280px) {
+    width: 1280px;
+    padding-left: 115px;
+    padding-right: 115px;
+  }
 }
 
-
-.products-secondary-title  {
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 1.16;
-    text-align: center;
-    text-transform: uppercase;
-    color:$color-ellipse;
-    margin-bottom: 15px;
-
+.products-secondary-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.16;
+  text-align: center;
+  text-transform: uppercase;
+  color: $color-ellipse;
+  margin-bottom: 15px;
 }
 
 .products-title {
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 34px;
-    line-height: 1.147;
-    text-align: center;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 1.147;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 
-    color :$color-accent;
-    margin-bottom: 31px;
+  color: $color-accent;
+  margin-bottom: 31px;
 
-    @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 39px;
-    }
+  }
 
-    @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1280px) {
     margin-bottom: 49px;
-    
-    }
+  }
 }
 
 .product-cards {
-    width: 100%;
+  width: 100%;
 
-
-    @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-between;
-    }
-
-
+  }
 }
 
-
 .card-title {
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 1.15;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: $color-text-white;
-    text-align: center;
-    margin-bottom: 30px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $color-text-white;
+  text-align: center;
+  margin-bottom: 30px;
 
-    @media screen and (min-width: 1280px) {
-        margin-bottom: 27px;
-    }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 27px;
+  }
 }
 
 .card-text {
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.5;
-    text-align: center;
-    // letter-spacing: 4px;
-    color: $color-text-white;
-    margin-bottom: 30px;
-    margin-left: 40px;
-    margin-right: 40px;
-    width: 200px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  // letter-spacing: 4px;
+  color: $color-text-white;
+  margin-bottom: 30px;
+  margin-left: 40px;
+  margin-right: 40px;
+  width: 200px;
+  height: 124px;
+  overflow: hidden;
+
+  @media screen and (min-width: 768px) {
+    width: 198px;
     height: 124px;
-    overflow: hidden;
-    
-    @media screen and (min-width: 768px) {
-        width: 198px;
-        height: 124px;
-        margin-left: 11px;
-        margin-right: 11px;
-         margin-bottom: 40px;
-    }
-    @media screen and (min-width: 1280px) {
-        margin-left: 44px;
-        margin-right: 44px;
-        margin-bottom: 60px;
-        width: 241px;
-        height: 106px;
-    }
+    margin-left: 11px;
+    margin-right: 11px;
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 1280px) {
+    margin-left: 44px;
+    margin-right: 44px;
+    margin-bottom: 60px;
+    width: 241px;
+    height: 106px;
+  }
 }
 
-
-
-
 .cards-item {
-    width: 220px;
-    padding-top: 113px;
-    position: relative;
-    margin-bottom: 17px;
+  width: 220px;
+  padding-top: 113px;
+  position: relative;
+  margin-bottom: 17px;
 
-    @media screen and (min-width: 320px) and (max-width: 767px) {
-        width: 280px;
-   
-    }
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    width: 280px;
+  }
 
-    @media screen and (min-width: 1280px) {
-        width: 329px;
-
-    }
+  @media screen and (min-width: 1280px) {
+    width: 329px;
+  }
 }
 
 .card-description {
-    width: 100%;
-    border-radius: 24px;
-    padding-top: 161px;
-    padding-bottom: 41px;
+  width: 100%;
+  border-radius: 24px;
+  padding-top: 161px;
+  padding-bottom: 41px;
+  box-shadow: 0px 10px 30px $color-line-gray;
 
-
-    
-    @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     padding-top: 152px;
     padding-bottom: 40px;
-    }
+  }
 
-    @media screen and (min-width: 1280px) {
-        padding-bottom: 50px;
-        padding-top: 187px;
-    }
+  @media screen and (min-width: 1280px) {
+    padding-bottom: 50px;
+    padding-top: 187px;
+  }
 }
 
 .products-thumb {
-    width: 249px;
-    position: absolute;
-    top: 113px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  width: 249px;
+  position: absolute;
+  top: 113px;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-    @extend %scale_to_div;
+  @extend %scale_to_div;
 
-
-    @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     width: 220px;
     top: 104px;
     left: 50%;
     transform: translate(-50%, -50%);
-    }
-    @media screen and (min-width: 1280px) {
+  }
+  @media screen and (min-width: 1280px) {
     width: 335px;
     top: 90px;
-    }
+  }
 
-    :hover,
-    :focus {
-        @extend %scale_function
-
-        }
+  :hover,
+  :focus {
+    @extend %scale_function;
+  }
 }
-
-
-
 
 .card-img {
-    display: block;   
-    margin: 0px;
-    object-fit: cover;
-    
+  display: block;
+  margin: 0px;
+  object-fit: cover;
 }
 
-
-
 .ice_cream {
-    background: $color-header;
+  background: $color-header;
 }
 
 .ice_coffee {
-    background:$color-products-coffe;
-
+  background: $color-products-coffe;
 }
 
 .milkshakes {
-    background: $color-products-shakes;
-
+  background: $color-products-shakes;
 }
 
 .more-link {
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    width: 40px;
-    height: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 50%;
-    background: $color-text-white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  background: $color-text-white;
 
- 
-    @include transition (background);
-    
-    &:focus,
-    &:hover,
-    &:focus .to-right-2,
-    &:hover .to-right-2 {
-        background: $color-accent-hover;
-        fill:$color-text-white;
-    }
-}    
+  @include transition(background);
 
-
+  &:focus,
+  &:hover,
+  &:focus .to-right-2,
+  &:hover .to-right-2 {
+    background: $color-accent-hover;
+    fill: $color-text-white;
+  }
+}
 
 .to-right-2 {
-    display: block;
-    align-items:center;
-    height: 20px;
-    width: 20px;
+  display: block;
+  align-items: center;
+  height: 20px;
+  width: 20px;
 
-    background-position: center;
-    fill: $color-accent;
+  background-position: center;
+  fill: $color-accent;
 
-    transition-property: background;
+  transition-property: background;
 }
-
 
 .dots {
-    display: flex;
-    justify-content: center;
-    // width: inherit;
-    height: 6px;
-    margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  // width: inherit;
+  height: 6px;
+  margin-bottom: 30px;
 
-    @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1280px) {
     margin-bottom: 27px;
-}
+  }
 }
 
 .dots-icon {
-    margin:0px 4px 0px 0px;
+  margin: 0px 4px 0px 0px;
 }
-
-
-
-
-
