--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,6 +1,7 @@
 .header-position {
   position: relative;
   padding: 0;
+  width: 100%;
 }
 html {
   scroll-behavior: smooth;
@@ -8,6 +9,7 @@ html {
 
 .header a {
   text-decoration: none;
+
 }
 
 .container.header {
@@ -175,13 +177,15 @@ html {
 .menu-list {
   @media (min-width: 1200px) {
     display: flex;
+    justify-content: space-between;
+    width: 545px;
   }
 }
 
 .menu-list-item {
   display: flex;
-  align-items: center;
-  padding-left: 21px;
+  // align-items: center;
+  // padding-left: 21px;
   height: 42px;
   font-weight: 700;
   font-size: 14px;
