--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -17,10 +17,10 @@
     srcset="./images/mobile/home/home_ice@2x.png 2x"
     srcset="./images/tablet/home/home_ice.png"
     srcset="./images/tablet/home/home_ice@2x.png 2x"
-    srcset="../images/tablet/home/home_ice@3x.png 3x"
+    srcset="./images/tablet/home/home_ice@3x.png 3x"
     srcset="./images/desktop/home/home_ice.png"
     srcset="./images/desktop/home/home_ice@2x.png 2x"
-    srcset="../images/desktop/home/home_ice@3x.png 3x"
+    srcset="./images/desktop/home/home_ice@3x.png 3x"
     
     alt="ice-cream">
 
