--- a/src/sass/components/locations/_locations.scss
+++ b/src/sass/components/locations/_locations.scss
@@ -5,14 +5,14 @@
   text-align: center;
   background: $tradition-background-color;
 
-  margin-bottom: 113px;
+  padding-bottom: 113px;
 
   @media screen and (min-width: $tablet) {
-    margin-bottom: 158px;
+    padding-bottom: 158px;
   }
 
   @media screen and (min-width: $desktop) {
-    margin-bottom: 165px;
+    padding-bottom: 165px;
   }
 }
 
