--- a/src/sass/components/products/_products.scss
+++ b/src/sass/components/products/_products.scss
@@ -1,15 +1,18 @@
 .products {
   background-color: #fff;
 }
-.container-products {
-  padding: 100px 20px;
+.products {
+  padding-top: 100px;
+  padding-bottom: 100px;
 
   @extend %list;
   @media screen and (min-width: $tablet) {
-    padding: 110px 35px;
+    padding-top: 110px;
+    padding-bottom: 110px;
   }
   @media screen and (min-width: $desktop) {
-    padding: 120px 110px;
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 }
 .second-name {
@@ -90,6 +93,8 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 130px;
@@ -190,6 +195,7 @@
   border-radius: 50%;
   align-items: center;
   text-align: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
