--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,7 @@
                     </button>
                 </div>
                 <div class="header-additional-menu" data-menu>
-                    <a class="header-nav-logo-additional" href="#">
+                    <a class="header-nav-logo-additional container" href="#">
                         <div class="header-nav-logo-top">
                             <span  class="header-nav-logo-first">Hell</span>
                             <svg class="header-logo-icon">
