--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -134,7 +134,7 @@
 .close-menu-btn:focus .close-btn-icon, .close-menu-btn:focus .close-btn-icon {
     fill:var(--accent-color);
 }
-.header-container{
+.header{
     position: relative;
 }
 .header-list{
@@ -207,7 +207,6 @@
     }
     .header{
         min-height: 88px;
-        top:40px;
     }
     
     .header-nav{
